outputs_20260402-095956-87e275f3/codegen/production/build_logs/compiler_stderr.log
/tmp/tdd_build_bwpezj5a/src/egtm_atom_3_phase_inverter_pwm.c:17:10: fatal error: IfxCpu.h: No such file or directory
   17 | #include "IfxCpu.h"
      |          ^~~~~~~~~~
compilation terminated.

/tmp/tdd_build_bwpezj5a/test/test_egtm_atom_3_phase_inverter_pwm.c:23:16: error: conflicting types for ‘mock_IfxEgtm_Pwm_init_callCount’; have ‘uint32’ {aka ‘unsigned int’}
   23 | extern uint32  mock_IfxEgtm_Pwm_init_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /tmp/tdd_build_bwpezj5a/test/test_egtm_atom_3_phase_inverter_pwm.c:2:
/tmp/tdd_build_bwpezj5a/include/mock_egtm_atom_3_phase_inverter_pwm.h:76:12: note: previous declaration of ‘mock_IfxEgtm_Pwm_init_callCount’ with type ‘int’
   76 | extern int mock_IfxEgtm_Pwm_init_callCount;
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_bwpezj5a/test/test_egtm_atom_3_phase_inverter_pwm.c:24:16: error: conflicting types for ‘mock_IfxEgtm_Trigger_trigToAdc_callCount’; have ‘uint32’ {aka ‘unsigned int’}
   24 | extern uint32  mock_IfxEgtm_Trigger_trigToAdc_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_bwpezj5a/include/mock_egtm_atom_3_phase_inverter_pwm.h:85:12: note: previous declaration of ‘mock_IfxEgtm_Trigger_trigToAdc_callCount’ with type ‘int’
   85 | extern int mock_IfxEgtm_Trigger_trigToAdc_callCount;
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
